# cpp-patterns

./: .appveyor.yml  .travis.yml  CMakeLists.txt  CoreFunctions_8cpp.html  CoreFunctions_8cpp.js  CoreFunctions_8cpp_source.html  CoreFunctions_8hpp.html  CoreFunctions_8hpp.js  CoreFunctions_8hpp_source.html  PythonCallback_8cpp.html  PythonCallback_8cpp.js  PythonCallback_8cpp_source.html  PythonCallback_8hpp.html  PythonCallback_8hpp.js  PythonCallback_8hpp_source.html  README.md  annotated.html  annotated.js  annotated_dup.js  argument-count_2README_8md.html  argument-count_2README_8md_source.html  argument-count_2test_8cpp.html  argument-count_2test_8cpp.js  argument-count_2test_8cpp_source.html  classTest.html  classTest.js  classVector.html  classVector.js  classdevice__matrix.html  classdevice__matrix.js  classdevice__matrix__view.html  classdevice__matrix__view.js  classdevice__vector__view.html  classdevice__vector__view.js  classes.html  classmath_1_1device__matrix.html  classmath_1_1device__matrix.js  classmath_1_1multi__array.html  classmath_1_1multi__array.js  classmulti__array.html  (+215 more)
.github/workflows/: linux.yml  windows.yml
argument-count/: CMakeLists.txt  README.md  test.cpp
bit_cast/: CMakeLists.txt  test.cpp
detection-idiom/: CMakeLists.txt  README.md  test.cpp
device_matrix/: CMakeLists.txt  device_matrix.cuh  device_matrix.hpp  runner.cpp  test.cpp  test.cu
doc/: Doxyfile
eigen_cuda/: CMakeLists.txt  README.md  inverse.cu
enable_if/: CMakeLists.txt  Makefile  README.md  test.cpp
fileptrbuf/: CMakeLists.txt  fileptrbuf.hpp  main.cpp
integer_sequence/: CMakeLists.txt  README.md  test.cpp
multi_array/: CMakeLists.txt  example.cpp  multi_array.hpp
overloaded/: CMakeLists.txt  test.cpp
print_type/: CMakeLists.txt  print_type.cpp
python_callback/: CoreFunctions.cpp  CoreFunctions.hpp  Interface.pyx  Makefile  PythonCallback.cpp  PythonCallback.hpp  test.py
python_zmq_communication/: CMakeLists.txt  communication.h  interface.i  server.cpp  server.h  test.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  (+57 more)
swig_pickle/: CMakeLists.txt  interface.i  test.h  test.py
tee/: CMakeLists.txt  test.cpp
unroll/: CMakeLists.txt  test.cpp  unroll.hpp
